ajout tabs + maj panel

--- a/maj/site/blueprints/pages/actualites.yml
+++ b/maj/site/blueprints/pages/actualites.yml
@@ -1,6 +1,36 @@
 Title: Actualités
 
 sections:
+  ticker:
+    type: fields
+    fields:
+      breves:
+        label: Brèves
+        type: structure
+        fields:
+          image:
+            type: files
+            parent: site.find('actualites').find('ticker')
+            layout: cards
+          titre:
+            label: Titre
+            type: text
+            required: true
+          contenu:
+            label: Contenu
+            type: textarea
+            size: small
+            required: true
+        help: "Chaque brève est constituée d'un titre et d'un texte court."
+  slider:
+    label: Slider
+    type: files
+    parent: site.find('actualites').find('slider')
+    layout: cards
+    image:
+      ratio: 3/1
+      cover: true
+    help: "Images format bannière seulement."
   published:
     headline: Pages publiées
     type: pages
