--- a/maj/site/blueprints/pages/permanences-partenaires.yml
+++ b/maj/site/blueprints/pages/permanences-partenaires.yml
@@ -28,7 +28,7 @@ tabs:
         label: Partenaires
         type: structure
         fields:
-          logo:
+          image:
             type: files
             layout: cards
             image:
