--- a/maj/site/blueprints/pages/default.yml
+++ b/maj/site/blueprints/pages/default.yml
@@ -1,2 +1,7 @@
-title: Default Page
-preset: page
+title: "{{ page.title }}"
+
+fields:
+  info:
+    label:
+    type: info
+    text: Cette page n'a pas de blueprint.
