--- a/maj/site/blueprints/pages/equipe.yml
+++ b/maj/site/blueprints/pages/equipe.yml
@@ -18,7 +18,7 @@ fields:
         type: select
         options: query
         query: 
-          fetch: site.children.template("services").children
+          fetch: site.find('services').children
           value: "{{ page.title }}"
         required: true
       detail:
