--- a/maj/site/blueprints/site.yml
+++ b/maj/site/blueprints/site.yml
@@ -5,7 +5,7 @@ tabs:
       - width: 1/3
         sticky: true
         sections:
-          pagesPubliees:
+          pages:
             headline: Pages publiées
             type: pages
             status: unlisted
@@ -17,17 +17,6 @@ tabs:
               - contact
               - nous-trouver
               - mentions-legales
-          nav:
-            headline: Menu de navigation
-            type: pages
-            status: listed
-            layout: list
-          pagesBrouillons:
-            headline: Brouillons
-            type: pages
-            status: drafts
-            layout: list
-            limit: 5
             
       - width: 2/3
         sections:
@@ -100,40 +89,11 @@ tabs:
       - width: 2/2
         sections:
           ticker:
-            type: fields
-            fields:
-              breves:
-                label: Brèves
-                type: structure
-                query: site.find('actualites').find('ticker').breves #ne marche pas
-                fields:
-                  image:
-                    type: files
-                    max: 1
-                    layout: cards
-                  titre:
-                    label: Titre
-                    type: text
-                    required: true
-                  contenu:
-                    label: Contenu
-                    type: textarea
-                    size: small
-                    required: true
-                  toggle:
-                    label: Date de fin d'affichage
-                    type: toggle
-                    text: 
-                      - "non"
-                      - "oui"
-                  dateFin:
-                    label: Date
-                    type: date
-                    display: DD/MM/YYYY
-                    when:
-                      toggle: true
-                    required: true
-                help: "Chaque brève est constituée d'un titre et d'un texte court."
+            type: pages
+            parent: site.find('actualites')
+            template: ticker
+            image:
+              query: false
           slider:
             label: Slider
             type: files
@@ -143,12 +103,12 @@ tabs:
               ratio: 3/1
               cover: true
             help: "Images format bannière seulement."
-          actualitesPubliees:
-            headline: Actualités publiées
+          actualites:
+            headline: Actualités
             type: pages
             parent: site.find('actualites')
             template: actualite
-            status: published
+            status: all
             layout: cards
             limit: 6
             size: tiny
@@ -156,41 +116,25 @@ tabs:
               ratio: 1/1
               cover: true
             help: "De la plus récente à la plus ancienne."
-          actualitesBrouillons:
-            headline: Brouillons
-            type: pages
-            parent: site.find('actualites')
-            template: actualite
-            status: drafts
-            layout: list
-            limit: 5
   
   services:
     label: Services
     columns:
       - width: 2/2
         sections:
-          servicesPublies:
-            headline: Services publiés
+          services:
+            headline: Services
             type: pages
             parent: site.find('services')
             templates: 
               - service
               - permanences-partenaires
-            status: published
+            status: all
             layout: list
             limit: 10
             image:
               cover: true
             help: "Liste apparaissant sur la page services."
-          servicesBrouillons:
-            headline: Brouillons
-            type: pages
-            parent: site.find('services')
-            template: service
-            status: drafts
-            layout: list
-            limit: 5
   
   equipe:
     label: Équipe
@@ -198,38 +142,6 @@ tabs:
       -width: 2/2
         sections:
           equipe:
-            type: fields
-            fields:
-              membres:
-                label: Membres
-                type: structure
-                query: site.find('equipe').membres # ne marche pas
-                fields:
-                  prenom:
-                    label: Prénom
-                    type: text
-                    required: true
-                  nom:
-                    label: Nom
-                    type: text
-                    required: true
-                  service:
-                    label: Service
-                    type: select
-                    options: query
-                    query: 
-                      fetch: site.find('services').children
-                      value: "{{ page.title }}"
-                    required: true
-                  detail:
-                    label: Détail
-                    type: textarea
-                    size: small
-                    help: "Présentation de la personne et de sa fonction."
-                    required: true
-                  telephone:
-                    label: Numéro de téléphone
-                    type: tel
-                    required: true
-                    help: "Format: xx xx xx xx xx"
-                help: "Liste apparaissant sur la page équipe."
+            headline: Équipe
+            type: pages
+            template: equipe
