--- a/maj/site/blueprints/site.yml
+++ b/maj/site/blueprints/site.yml
@@ -115,6 +115,7 @@ tabs:
             image:
               ratio: 1/1
               cover: true
+            info: "{{ page.tags }}"
             help: "De la plus récente à la plus ancienne."
   
   services:
