--- a/maj/site/blueprints/site.yml
+++ b/maj/site/blueprints/site.yml
@@ -92,6 +92,7 @@ tabs:
             type: pages
             parent: site.find('actualites')
             template: ticker
+            create: false
             image:
               query: false
           slider:
@@ -146,3 +147,4 @@ tabs:
             headline: Équipe
             type: pages
             template: equipe
+            create: false
