maj design accueil + actus

--- a/maj/site/blueprints/pages/ticker.yml
+++ b/maj/site/blueprints/pages/ticker.yml
@@ -17,6 +17,7 @@ fields:
         label: Contenu
         type: textarea
         size: small
+        maxlength: 120
         required: true
       toggle:
         label: Date de fin d'affichage
