maj design actus

--- a/maj/site/blueprints/pages/actualite.yml
+++ b/maj/site/blueprints/pages/actualite.yml
@@ -9,11 +9,11 @@ tabs:
         label: Résumé
         type: textarea
         size: small
-        help: "Apparaîtra sur la page actualités. Max 100 caractères."
+        maxlength: 100
+        help: "Apparaîtra sur la page actualités."
       tags:
         label: Tags
         type: tags
-        # max: 3
   article:
     label: Article
     sections:
