--- a/maj/site/blueprints/pages/equipe.yml
+++ b/maj/site/blueprints/pages/equipe.yml
@@ -18,9 +18,8 @@ fields:
         type: select
         options: query
         query: 
-          fetch: site.find('services').children
+          fetch: site.find('services').children.template('service')
           value: "{{ page.title }}"
-        required: true
       poste:
         label: Poste
         type: text
