--- a/maj/site/blueprints/pages/service.yml
+++ b/maj/site/blueprints/pages/service.yml
@@ -1,55 +1,61 @@
 Title: Service
 
 tabs:
-  infos:
-    label: Infos
-    type: fields
-    fields:
-      resume:
-        label: Résumé
-        type: textarea
-        size: small
-        required: true
-        help: "Apparaîtra sous le nom du service."
-      horaires:
-        label: Horaires
-        type: structure
+  panneau:
+    label: Panneau
+    sections:
+      partenaires:
+        type: files
+        parent: page.find('partenaires')
+        layout: cards
+      infos:
+        type: fields
         fields:
-          jour:
-            label: Jour(s)
-            type: text
+          resume:
+            label: Résumé
+            type: textarea
+            size: small
             required: true
-            help: "Format: Lundi / Lundi et Mardi / Lundi au Mardi"
-          horaireDebutMatin:
-            label: Horaire ouverture matin
-            type: text
-            help: "Format: Xh"
-          horaireFinMatin:
-            label: Horaire fermeture matin
-            type: text
-            help: "Format: Xh"
-          horaireDebutAprem:
-            label: Horaire ouverture après-midi
-            type: text
-            help: "Format: Xh"
-          horaireFinAprem:
-            label: Horaire fermeture après-midi
-            type: text
-            help: "Format: Xh"
-        help: "Apparaîtra sous le résumé du service."
-      telephone:
-        label: Numéro de téléphone
-        type: tel
-        help: "Format: xx xx xx xx xx"
-      mails:
-        label: Mail(s) de contact
-        type: structure
-        fields:
-          adresse:
-            label: Adresse
-            type: email
-        required: true
-        help: "Adresse(s) utilisée(s) pour le formulaire de contact."
+            help: "Apparaîtra sous le nom du service."
+          horaires:
+            label: Horaires
+            type: structure
+            fields:
+              jour:
+                label: Jour(s)
+                type: text
+                required: true
+                help: "Format: Lundi / Lundi et Mardi / Lundi au Mardi"
+              horaireDebutMatin:
+                label: Horaire ouverture matin
+                type: text
+                help: "Format: Xh"
+              horaireFinMatin:
+                label: Horaire fermeture matin
+                type: text
+                help: "Format: Xh"
+              horaireDebutAprem:
+                label: Horaire ouverture après-midi
+                type: text
+                help: "Format: Xh"
+              horaireFinAprem:
+                label: Horaire fermeture après-midi
+                type: text
+                help: "Format: Xh"
+            help: "Apparaîtra sous le résumé du service."
+          telephone:
+            label: Numéro de téléphone
+            type: tel
+            help: "Format: xx xx xx xx xx"
+          mails:
+            label: Mail(s) de contact
+            type: structure
+            fields:
+              adresse:
+                label: Adresse
+                type: email
+            required: true
+            help: "Adresse(s) utilisée(s) pour le formulaire de contact."
   article:
     label: Article
     sections:
