--- a/maj/site/blueprints/pages/services.yml
+++ b/maj/site/blueprints/pages/services.yml
@@ -12,5 +12,5 @@ sections:
     layout: list
     limit: 10
     image:
-      cover: true
+      query: false
     help: "Liste apparaissant sur la page services."
